global IframeUrl var + NA meeting results in modal

--- a/client/layout.html
+++ b/client/layout.html
@@ -9,7 +9,7 @@
   {{>Template.dynamic template=content}}
 
   {{>Nav}}
-
-  {{>IframeModal iframeUrl=iframeUrl}}
+  
+  {{>IframeModal iframeUrl=IframeUrl}}
 </body>
 </template>
