--- a/client/meetingFinder.html
+++ b/client/meetingFinder.html
@@ -95,7 +95,7 @@
 			<option value="200">200 miles</option>
 			<option value="500">500 miles</option>
 		</select>
-    <input type="submit" value="Search">
+    <input type="submit" value="Launch Map">
   </form>
   <div id="NA-meeting-search-results-container">
     <iframe src="{{meetingResultsUrl}}" frameborder="0"></iframe>
