server side meeting filter fns

--- a/client/layout.html
+++ b/client/layout.html
@@ -1,15 +1,39 @@
 <template name="Layout">
 <head>
   <title>Samhsa</title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
 
 <body>
-  <h1>SAMHSA</h1>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <!-- Title -->
+        <span class="mdl-layout-title">Title</span>
+        <!-- Add spacer, to align navigation to the right -->
+        <div class="mdl-layout-spacer"></div>
+        <!-- Navigation. We hide it in small screens. -->
+        <nav class="mdl-navigation mdl-layout--large-screen-only">
+          {{>NavLinks}}
+        </nav>
+      </div>
+    </header>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">Title</span>
+      <nav class="mdl-navigation">
+        {{>NavLinks}}
+      </nav>
+    </div>
+    <main class="mdl-layout__content">
+      <div class="page-content">
+        {{>Template.dynamic template=content}}
+      </div>
+    </main>
+  </div>
 
-  {{>Template.dynamic template=content}}
-
-  {{>Nav}}
-  
   {{>IframeModal iframeUrl=IframeUrl}}
 </body>
 </template>
