--- a/client/meetingFinder.html
+++ b/client/meetingFinder.html
@@ -1,13 +1,54 @@
 <template name="MeetingFinder">
   <h2>Meeting Finder</h2>
 
-  Meetings
-  <ul>
-    <li><a href="http://www.na.org/meetingsearch/">NA</a></li>
-    <li><a href="http://www.aa.org/pages/en_US/find-aa-resources">AA</a></li>
-    <li><a href="http://cdawebsitedev.com/meetings.html#">Chemically Dependent Anonymous</a></li>
-    <li><a href="http://www.smartrecovery.org/meetings_db/view/">SMART Recovery</a></li>
-  </ul>
+  <p>Find Narcotics Anonymous (NA), Alcholics Anonymous (AA), Chemically Dependent Anonymous (CDA), and SMART Recovery Meetings with this one simple tool!</p>
+
+  <form id="meeting-finder-location-entry">
+    <input type="text" name="city" placeholder="City">
+    <input type="text" name="state" placeholder="State">
+    <input type="submit" value="Search">
+  </form>
+
+  <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+    <thead>
+      <tr>
+        <th class="mdl-data-table__cell--non-numeric">Material</th>
+        <th>Quantity</th>
+        <th>Unit price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Acrylic (Transparent)</td>
+        <td>25</td>
+        <td>$2.90</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Plywood (Birch)</td>
+        <td>50</td>
+        <td>$1.25</td>
+      </tr>
+      <tr>
+        <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
+        <td>10</td>
+        <td>$2.35</td>
+      </tr>
+    </tbody>
+  </table>
+
+
+  <div>
+    <p>
+      Sources:
+
+      <ul>
+        <li><a href="http://www.na.org/meetingsearch/">NA</a></li>
+        <li><a href="http://www.aa.org/pages/en_US/find-aa-resources">AA</a></li>
+        <li><a href="http://cdawebsitedev.com/meetings.html#">CDA</a></li>
+        <li><a href="http://www.smartrecovery.org/meetings_db/view/">SMART Recovery</a></li>
+      </ul>
+    </p>
+  </div>
 
   {{>NA_Info}}
   {{>CDA_Info}}
