--- a/client/meetingFinder.html
+++ b/client/meetingFinder.html
@@ -63,10 +63,10 @@
       Sources:
 
       <ul>
-        <li><a href="http://www.na.org/meetingsearch/">NA</a></li>
-        <li><a href="http://www.aa.org/pages/en_US/find-aa-resources">AA</a></li>
-        <li><a href="http://cdawebsitedev.com/meetings.html#">CDA</a></li>
-        <li><a href="http://www.smartrecovery.org/meetings_db/view/">SMART Recovery</a></li>
+        <li><a href="http://www.na.org/meetingsearch/" class="external-link">NA</a></li>
+        <li><a href="http://www.aa.org/pages/en_US/find-aa-resources" class="external-link">AA</a></li>
+        <li><a href="http://cdawebsitedev.com/meetings.html#" class="external-link">CDA</a></li>
+        <li><a href="http://www.smartrecovery.org/meetings_db/view/" class="external-link">SMART Recovery</a></li>
       </ul>
     </p>
   </div>
