Self-Help refs, pdf.js, chosen for meeting finder, footer w hotline #s

--- a/client/layout.html
+++ b/client/layout.html
@@ -24,6 +24,9 @@
         {{>Template.dynamic template=content}}
       </div>
     </main>
+
+    {{>Footer}}
+    
   </div>
 
   {{>IframeModal iframeUrl=IframeUrl}}
