--- a/client/navLinks.html
+++ b/client/navLinks.html
@@ -1,7 +1,10 @@
 <template name="NavLinks">
   <a class="mdl-navigation__link" href="/">Home</a>
+  <a class="mdl-navigation__link" href="/drugs">Drug Info</a>
   <a class="mdl-navigation__link" href="/meeting-finder">Meeting Finder</a>
+  <a class="mdl-navigation__link" href="/self-help">Self-Help</a>
+  <!-- <a class="mdl-navigation__link" href="/stories">Stories</a>
+
   <a class="mdl-navigation__link" href="/goals">Goals</a>
-  <a class="mdl-navigation__link" href="/drugs">Drugs</a>
-  <a class="mdl-navigation__link" href="/toolbox">Toolbox</a>
+  <a class="mdl-navigation__link" href="/toolbox">Toolbox</a> -->
 </template>
