self-help pdf renderer ;)

--- a/client/layout.html
+++ b/client/layout.html
@@ -25,10 +25,13 @@
       </div>
     </main>
 
-    {{>Footer}}
+    {{>PDFViewer}}
     
+    {{>Footer}}
+
   </div>
 
   {{>IframeModal iframeUrl=IframeUrl}}
+
 </body>
 </template>
