--- a/client/SelfHelp.html
+++ b/client/SelfHelp.html
@@ -17,7 +17,7 @@
   }
   </style>
 
-  <canvas id="the-canvas"></canvas>
+  <div id="example1"></div>
 
   <!-- <a href="/web/viewer.html?file=%2Fyourpdf.pdf">Open yourpdf.pdf with PDF.js</a> -->
 
@@ -29,7 +29,7 @@
            style="background-image: url('{{resources.[0].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[0].page_begin}}" class="external-link mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[0].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[0].title}}</span>
           </a>
         </div>
@@ -40,7 +40,7 @@
            style="background-image: url('{{resources.[1].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[1].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[1].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[1].title}}</span>
           </a>
         </div>
@@ -51,7 +51,7 @@
            style="background-image: url('{{resources.[2].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[2].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[2].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[2].title}}</span>
           </a>
         </div>
@@ -65,7 +65,7 @@
            style="background-image: url('{{resources.[3].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[3].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[3].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[3].title}}</span>
           </a>
         </div>
@@ -76,7 +76,7 @@
            style="background-image: url('{{resources.[4].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[4].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[4].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[4].title}}</span>
           </a>
         </div>
@@ -87,7 +87,7 @@
            style="background-image: url('{{resources.[5].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[5].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[5].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[5].title}}</span>
           </a>
         </div>
@@ -101,7 +101,7 @@
            style="background-image: url('{{resources.[6].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[6].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[6].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[6].title}}</span>
           </a>
         </div>
@@ -112,7 +112,7 @@
            style="background-image: url('{{resources.[7].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[7].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[7].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[7].title}}</span>
           </a>
         </div>
@@ -123,7 +123,7 @@
            style="background-image: url('{{resources.[8].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[8].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[8].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[8].title}}</span>
           </a>
         </div>
@@ -137,7 +137,7 @@
            style="background-image: url('{{resources.[9].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[9].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[9].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[9].title}}</span>
           </a>
         </div>
@@ -148,7 +148,7 @@
            style="background-image: url('{{resources.[10].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[10].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[10].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[10].title}}</span>
           </a>
         </div>
@@ -159,7 +159,7 @@
            style="background-image: url('{{resources.[11].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[11].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[11].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[11].title}}</span>
           </a>
         </div>
@@ -173,7 +173,7 @@
            style="background-image: url('{{resources.[12].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[12].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+          <a data-pgnum="{{resources.[12].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
             <span class="card-image__filename">{{resources.[12].title}}</span>
           </a>
         </div>
@@ -184,7 +184,7 @@
            style="background-image: url('{{resources.[13].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[13].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl  -js-ripple-effect">
+          <a data-pgnum="{{resources.[13].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl  -js-ripple-effect">
             <span class="card-image__filename">{{resources.[13].title}}</span>
           </a>
         </div>
@@ -195,7 +195,7 @@
            style="background-image: url('{{resources.[14].imgUrl}}')">
         <div class="mdl-card__title mdl-card--expand"></div>
         <div class="mdl-card__actions">
-          <a target="_blank" href="matrix.pdf#page={{resources.[14].page_begin}}" class="mdl-button mdl-button--colored mdl-js-button mdl  -js-ripple-effect">
+          <a data-pgnum="{{resources.[14].page_begin}}" class="self-help-resource mdl-button mdl-button--colored mdl-js-button mdl  -js-ripple-effect">
             <span class="card-image__filename">{{resources.[14].title}}</span>
           </a>
         </div>
@@ -203,4 +203,7 @@
     </div>
   </div>
 
+  <div>Source: <a href="http://www.methadone.us/matrix.pdf#page=39">Client’s Handbook
+Matrix Intensive Outpatient Treatment for
+People With Stimulant Use Disorders</a></div>
 </template>
