--- a/client/meetingFinder.html
+++ b/client/meetingFinder.html
@@ -23,30 +23,36 @@
       <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
         <thead>
           <tr>
-            <th class="mdl-data-table__cell--non-numeric">Source</th>
+            <th class="mdl-data-table__cell--non-numeric">Type</th>
             <th class="mdl-data-table__cell--non-numeric">Name</th>
+            <th class="mdl-data-table__cell--non-numeric">City/Area</th>
+            <th class="mdl-data-table__cell--non-numeric">Phone</th>
+            <th class="mdl-data-table__cell--non-numeric">Website</th>
             <th class="mdl-data-table__cell--non-numeric">Time</th>
             <th class="mdl-data-table__cell--non-numeric">Location</th>
             <th class="mdl-data-table__cell--non-numeric">Contact</th>
-            <th class="mdl-data-table__cell--non-numeric">Phone</th>
-            <th class="mdl-data-table__cell--non-numeric">City</th>
             <th class="mdl-data-table__cell--non-numeric">State</th>
-            <th class="mdl-data-table__cell--non-numeric">Area</th>
             <th class="mdl-data-table__cell--non-numeric">Additional Info</th>
           </tr>
         </thead>
         <tbody>
           {{#each meeting in searchResults}}
             <tr>
-              <td class="mdl-data-table">{{meeting.source}}</td>
+              <td class="mdl-data-table">{{meeting.type}}</td>
               <td class="mdl-data-table">{{meeting.name}}</td>
+              <td class="mdl-data-table">
+                {{#if meeting.city}}
+                  {{meeting.city}}
+                {{else}}
+                  {{meeting.area}}
+                {{/if}}
+              </td>
+              <td class="mdl-data-table">{{{meeting.phone}}}</td>
+              <td class="mdl-data-table">{{{meeting.website}}}</td>
               <td class="mdl-data-table">{{meeting.time}}</td>
               <td class="mdl-data-table">{{meeting.location}}</td>
               <td class="mdl-data-table">{{{meeting.contact}}}</td>
-              <td class="mdl-data-table">{{{meeting.phone}}}</td>
-              <td class="mdl-data-table">{{meeting.city}}</td>
               <td class="mdl-data-table">{{meeting.state}}</td>
-              <td class="mdl-data-table">{{meeting.area}}</td>
               <td class="mdl-data-table">{{meeting.addlInfo}}</td>
             </tr>
           {{/each}}
