format phone nums + websites + hide pdf viewer when switching

--- a/client/meetingFinder.html
+++ b/client/meetingFinder.html
@@ -48,7 +48,9 @@
                 {{/if}}
               </td>
               <td class="mdl-data-table">{{{meeting.phone}}}</td>
-              <td class="mdl-data-table">{{{meeting.website}}}</td>
+              <td class="mdl-data-table">
+                <a href="{{meeting.website}}">{{meeting.website}}</a>
+              </td>
               <td class="mdl-data-table">{{meeting.time}}</td>
               <td class="mdl-data-table">{{meeting.location}}</td>
               <td class="mdl-data-table">{{{meeting.contact}}}</td>
