--- a/client/layout.html
+++ b/client/layout.html
@@ -3,11 +3,8 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <!-- Title -->
-        <span class="mdl-layout-title">Title</span>
-        <!-- Add spacer, to align navigation to the right -->
+        <span class="mdl-layout-title">Compass Rose</span>
         <div class="mdl-layout-spacer"></div>
-        <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
           {{>NavLinks}}
         </nav>
@@ -26,12 +23,9 @@
     </main>
 
     {{>PDFViewer}}
-    
+
     {{>Footer}}
 
   </div>
-
-  {{>IframeModal iframeUrl=IframeUrl}}
-
 </body>
 </template>
