--- a/client/layout.html
+++ b/client/layout.html
@@ -9,6 +9,7 @@
           {{>NavLinks}}
         </nav>
       </div>
+
     </header>
     <div class="mdl-layout__drawer">
       <span class="mdl-layout-title">Title</span>
@@ -28,4 +29,5 @@
 
   </div>
 </body>
+<head></head>
 </template>
