--- a/client/layout.html
+++ b/client/layout.html
@@ -3,7 +3,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title"><img src="logo-small.png" class="compass-rose-logo-small" alt="Compass Rose logo"></span>
+        <span class="mdl-layout-title"><img src="images/logo-small.png" class="compass-rose-logo-small" alt="Compass Rose logo"></span>
         <div class="mdl-layout-spacer"></div>
         <nav class="mdl-navigation mdl-layout--large-screen-only">
           {{>NavLinks}}
@@ -12,7 +12,7 @@
 
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title"><img src="logo-small.png" class="compass-rose-logo-small" alt="Compass Rose logo"></span>
+      <span class="mdl-layout-title"><img src="images/logo-small.png" class="compass-rose-logo-small" alt="Compass Rose logo"></span>
       <nav class="mdl-navigation">
         {{>NavLinks}}
         <hr>
