--- a/client/navLinks.html
+++ b/client/navLinks.html
@@ -2,7 +2,7 @@
   <a class="mdl-navigation__link" href="/">Home</a>
   <a class="mdl-navigation__link" href="/drugs">Drug Info</a>
   <a class="mdl-navigation__link" href="/meeting-finder">Meeting Finder</a>
-  <a class="mdl-navigation__link" href="/self-help">Self-Help</a>
+  <a class="mdl-navigation__link" href="/worksheet">Self-Help</a>
   <!-- <a class="mdl-navigation__link" href="/stories">Stories</a>
 
   <a class="mdl-navigation__link" href="/goals">Goals</a>
