--- a/client/layout.html
+++ b/client/layout.html
@@ -19,8 +19,8 @@
         <a class="mdl-navigation__link" href="/credits">Credits</a>
       </nav>
     </div>
-    <main class="mdl-layout__content">
-      <div class="page-content">
+    <main class="mdl-layout__content" >
+      <div class="page-content" style="    height: 100%;">
         {{>Template.dynamic template=content}}
       </div>
     </main>
